# teamy-youtube

./: .gitignore  AGENTS.md  Cargo.toml  Get-YouTubeAPIKey.ps1  README.md  check-all.ps1  run-tracing.ps1  todo.md  update.ps1
.config/tracey/: config.styx
.github/skills/failure-observation-events/: SKILL.md
analysis/: Load-Data.ps1
docs/notes/: analysis.md  exported.sql
docs/spec/product/: cli.md  data-model.md
docs/spec/repo/: publishing-standards.md
docs/spec/tools/: tool-standards.md
src/: lib.rs  logging_init.rs  main.rs  sync_progress.rs
src/channel_sync/: channel_discovery.rs  channel_sync_storage.rs  channel_sync_target_file.rs  mod.rs  video_download_event_file.rs
src/cli/: facet_shape.rs  global_args.rs  mod.rs
src/cli/analyze/: analyze_cli.rs  mod.rs
src/cli/analyze/watch_later/: analyze_watch_later_cli.rs  mod.rs
src/cli/api/: api_cli.rs  mod.rs
src/cli/api/key/: api_key_cli.rs  mod.rs
src/cli/cache/: cache_cli.rs  mod.rs
src/cli/cache/clean/: cache_clean_cli.rs  mod.rs
src/cli/cache/open/: cache_open_cli.rs  mod.rs
src/cli/cache/show/: cache_show_cli.rs  mod.rs
src/cli/config/: config_cli.rs  mod.rs
src/cli/config/init/: config_init_cli.rs  mod.rs
src/cli/config/show/: config_show_cli.rs  mod.rs
src/cli/fetch/: fetch_cli.rs  mod.rs
src/cli/fetch/video/: fetch_video_cli.rs  mod.rs
src/cli/home/: home_cli.rs  mod.rs
src/cli/home/open/: home_open_cli.rs  mod.rs
src/cli/home/show/: home_show_cli.rs  mod.rs
src/cli/import/: import_cli.rs  mod.rs
src/cli/import/postgres/: import_postgres_cli.rs  mod.rs
src/cli/sync/: mod.rs  sync_cli.rs
src/cli/sync/channel/: mod.rs  sync_channel_cli.rs
src/cli/sync/dir/: mod.rs  sync_dir_cli.rs
src/cli/sync/now/: mod.rs  sync_now_cli.rs
src/cli/sync/run/: mod.rs  (+1 more)
src/cli/takeout/: mod.rs  takeout_cli.rs
src/fs_db/: channel_metadata_snapshot_file.rs  mod.rs  sync_database_summary.rs  sync_paths.rs  thumbnail_unavailable_event_file.rs  thumbnail_unchanged_event_file.rs  video_event_file.rs  video_metadata_snapshot_file.rs  video_storage.rs  write_fetched_video_data.rs  write_fetched_video_metadata.rs  write_missing_video_data.rs  write_takeout_sync.rs
src/paths/: app_home.rs  cache.rs  mod.rs  sync_dir.rs  youtube_api_key.rs
src/postgres_sync/: facet_row.rs  mod.rs  postgres_sync_summary.rs  sync_postgres.rs
src/takeout/: import_summary.rs  mod.rs  persist_takeout_import.rs  playlist_video_entry.rs  raw_watch_history_entry.rs  raw_watch_history_subtitle.rs  takeout_import_manifest.rs  takeout_watch_history_event_file.rs  takeout_watch_later_event_file.rs  watch_history_entry.rs  watch_later_entry.rs  youtube_video_id.rs
src/youtube_api/: mod.rs  youtube_thumbnail.rs  youtube_video_fetch_outcome.rs  youtube_video_metadata.rs
tests/: cli_fuzzing.rs  fetch_video_metadata_snapshots.rs  sync_takeout_output.rs
(+26 files in other folders)
